Lazy loading funktioniert

--- a/index.html
+++ b/index.html
@@ -70,6 +70,8 @@
                 literarischen
                 Darstellungen einer Weltraumreise ist.</p>
 
+                <img data-src="./assets/img/chricken_A_pack_of_old_books_in_a_shalf_in_the_office_of_a_stea_272440cd-efb1-48b9-a192-2933a382abba.png">
+                <img data-src="./assets/img/chricken_A_pack_of_old_books_in_a_shalf_in_the_office_of_a_stea_4f3716a6-ba82-4f05-986a-cbc486c78e47.png">
             <p>Diese Werke eröffneten neue Perspektiven und regten die Fantasie der Leser an. Sie legten den Grundstein
                 für
                 eine Gattung, die bis heute fasziniert und inspiriert.</p>
