--- a/romantik.html
+++ b/romantik.html
@@ -33,6 +33,7 @@
                 Strömungen
                 in der Romantik führten zu einer intensiven Auseinandersetzung mit Emotionen, der Natur und der
                 individuellen Erfahrung.</p>
+                <img data-src="./assets/img/chricken_A_pack_of_old_books_in_a_shalf_in_the_office_of_a_stea_43adeabf-75f1-4050-ac7b-63b6ccc08b55.png">
         </section>
 
         <section>
@@ -48,7 +49,9 @@
                 Autoren und Dichter der Romantik ein tiefes Interesse an der Natur und dem Übernatürlichen. Sie suchten
                 nach
                 einer Verbindung zum Göttlichen und erforschten die inneren Welten des Menschen.</p>
-
+                <img data-src="./assets/img/chricken_A_pack_of_old_books_in_a_shalf_in_the_office_of_a_stea_272440cd-efb1-48b9-a192-2933a382abba.png">
+                <img data-src="./assets/img/chricken_A_pack_of_old_books_in_a_shalf_in_the_office_of_a_stea_43adeabf-75f1-4050-ac7b-63b6ccc08b55.png">
+                <img data-src="./assets/img/chricken_A_pack_of_old_books_in_a_shalf_in_the_office_of_a_stea_4f3716a6-ba82-4f05-986a-cbc486c78e47.png">
             <p>Wichtige Vertreter dieser Bewegung sind neben Goethe und Schiller auch Novalis und E.T.A. Hoffmann. Sie
                 schufen Werke, die nicht nur die Schönheit der Natur feierten, sondern auch die Komplexität menschlicher
                 Emotionen und die Faszination für das Unbekannte thematisierten.</p>
@@ -62,7 +65,7 @@
                 Novalis
                 mit seinem Werk "Heinrich von Ofterdingen" und die Lyrik von Eichendorff reflektieren die Sehnsucht nach
                 einer idealen Welt.</p>
-
+                
             <p>E.T.A. Hoffmann, bekannt für seine fantastischen Erzählungen, vermischte Realität und Fantasie und schuf
                 eine
                 Atmosphäre, die den Leser in die Tiefen der menschlichen Psyche eintauchen ließ. Seine Erzählungen sind
